# RefaelSubmission

./: ALL_BUILD.vcxproj  BuildCMakeWheel.vcxproj  BuildCMakeWheel.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  DevelopmentScript.py  Dockerfile  Encripter.py  Encripter.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  MyExecutable.vcxproj  MyExecutable.vcxproj.filters  MyPackage.vcxproj  MyPackage.vcxproj.filters  Package.vcxproj  Package.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp
.github/workflows/: docker-image.yml
package/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  Package.sln  cmake_install.cmake
